--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,7 +34,7 @@
               </li>
             </ul> 
           </div>
-          <a href="#" class="btn btn-danger download-template" role="button" aria-disabled="true">Download CV</a>
+          <a href="http://localhost:3000/download" class="btn btn-danger download-template" role="button" aria-disabled="true">Download CV</a>
       </div>
     </nav>
     <main class="page cv-page">
