--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,7 +44,7 @@
           <li><a href="#skills">Skills</a></li>
           <li><a href="#publication">Publications</a></li>
           <li><a href="#contact">Get in touch</a></li>
-          <li><a href="http://localhost:3000/download" class="btn btn-danger download-template"
+          <li><a href="/download" class="btn btn-danger download-template"
               role="button">Download-CV</a></li>
 
         </ul>
